--- a/vk-blocks/editor-css/editor-block-build-marge.scss
+++ b/vk-blocks/editor-css/editor-block-build-marge.scss
@@ -48,6 +48,27 @@
 	margin-bottom: 8px;
 }
 
+/*-------------------------------------------*/
+/* カラムの方向が逆のラベル
+/*-------------------------------------------*/
+.wp-block-columns {
+	&.is-vk-row-reverse {
+		border: 1px dashed #ccc !important;
+		left:0;
+		&:before {
+			position:absolute !important;
+			right:0;
+			top:0;
+			font-size:10px;
+			background: #eeeeee;
+			padding: .2em .6em;
+			z-index: 1000;
+			line-height: 1.2;
+			letter-spacing: 1px;
+			content: 'Reverse' !important;
+		}
+	}
+}
 @import "_variables";
 @import "../lib/bootstrap/scss/bootstrap-sidepanel.scss";
 
@@ -302,6 +323,8 @@ div[data-type="vk-blocks/page-content"].is-selected{
 
 // アニメーションブロックの識別用枠線
 @import "./editor_before_animation";
+
+@import "./editor_before_tab";
 
 // アイコンカードの見出しがテーマの見出し指定機能に負けるので上書き
 @import "./editor_before_icon-card";
